--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "yarn install --frozen-lockfile",
-    "build": "nest build",
+ "prebuild": "yarn install --frozen-lockfile",
+  "build": "node_modules/.bin/nest build",
+  "start": "node dist/main.js",
+  "start:dev": "nest start --watch",
+  "postinstall": "prisma generate",
+
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "postinstall": "prisma generate",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
